force-app/main/default/objects/Eligibility_Table__c/Eligibility_Table__c.object-meta.xml
<CustomObject>
    <label>Eligibility Table</label>
    <nameField>
        <label>Eligibility Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibilities table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>