force-app/main/default/objects/Eligibility_Table__c/fields/Eligibility_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Relationship__c</fullName>
    <label>Eligibility Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Oneself</fullName>
            </value>
            <value>
                <fullName>Divorcee</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Publicly known</fullName>
            </value>
            <value>
                <fullName>Legal Guardian</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>