force-app/main/default/objects/Eligibility_Table__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned Hostage</fullName>
            </value>
            <value>
                <fullName>Bereaved parents</fullName>
            </value>
            <value>
                <fullName>Divorced Bereaved parents</fullName>
            </value>
            <value>
                <fullName>Widow</fullName>
            </value>
            <value>
                <fullName>Guardian for orphans from two parents</fullName>
            </value>
            <value>
                <fullName>Parents of a hostage</fullName>
            </value>
            <value>
                <fullName>Divorced parents of hostage</fullName>
            </value>
            <value>
                <fullName>Spouse of a hostage</fullName>
            </value>
            <value>
                <fullName>Sibling or child of a hostage</fullName>
            </value>
            <value>
                <fullName>Sibling or child of a hostage (40+)</fullName>
            </value>
            <value>
                <fullName>Orphan from two parents</fullName>
            </value>
            <value>
                <fullName>Survivor from the 7.10 party taking part in a recognized rehabilitation program</fullName>
            </value>
            <value>
                <fullName>Victims of hostilities recognized by Bituach Leumi for eligibility of 20% or more- physical disability and/or 20% or more - mental disability</fullName>
            </value>
            <value>
                <fullName>Victims of Am Kalavi who were recognized with 20% disability or more by the Bituach Leumi</fullName>
            </value>
            <value>
                <fullName>Parent of Minor who is recognized by Bituach Leumi for eligibility of 20% or more</fullName>
            </value>
            <value>
                <fullName>First Responders</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>